# viddl

./: LICENSE  README.md  todo  viddl.cabal
src/: Clients.hs  Config.hs  Helpers.hs  Main.hs  YTDL.hs
src/Templates/: Error.hs  Index.hs  Loading.hs
views/: index.html  loading.html
