cabal-version:      2.0
name:               viddl
version:            0.1.0.0
synopsis:           A web interface to youtube-dl
-- description:
homepage:
-- bug-reports:
license:            ISC
license-file:       LICENSE
author:             depsterr
maintainer:         depsterr@protonmail.com
category:           Web
build-type:         Simple
extra-source-files: CHANGELOG.md

executable viddl
    main-is:          Main.hs
    other-modules:    Templates.Index
                    , Templates.Loading
                    , Templates.Error
    -- other-extensions:
    ghc-options:      -Wall -O2
    build-depends:    base ^>=4.14.1.0
                    , scotty
                    , hedis
                    , transformers
                    , text
                    , unix
                    , raw-strings-qq
                    , network-uri
    hs-source-dirs:   src
    default-language: Haskell2010
