cabal-version:      2.0
name:               viddl
version:            0.1.0.0
synopsis:           A web interface to youtube-dl
-- description:
homepage:
-- bug-reports:
license:            ISC
license-file:       LICENSE
author:             depsterr
maintainer:         depsterr@protonmail.com
category:           Web
build-type:         Simple

library
    exposed-modules:  Templates.Index
                    , Templates.Error
                    , YTDL
                    , Helpers
                    , Config
    ghc-options:      -Wall -O2 -threaded
    build-depends:    base ^>=4.14.1.0
                    , scotty
                    , text
                    , raw-strings-qq
                    , network-uri
                    , directory
                    , process
                    , bytestring
                    , pureMD5
                    , utf8-string
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010

executable viddl
    main-is:          Main.hs
    other-modules:    Templates.Index
                    , Templates.Error
                    , Helpers
                    , YTDL
                    , Config
    ghc-options:      -Wall -O2 -threaded
    build-depends:    base ^>=4.14.1.0
                    , scotty
                    , text
                    , raw-strings-qq
                    , network-uri
                    , directory
                    , process
                    , bytestring
                    , pureMD5
                    , utf8-string
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
